tests/eu.numberfour.n4js.bugreports.tests/bugreports-tests/IDEBUG_0298_subtypeRuleForConstructorTypeRefs.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.bugreports.tests.N4JSBugreportTest END_SETUP  */

class C {
	
	<Tx> mx() {
		var tx1 : Tx;
		var tx2 : Tx;
		// XPECT noerrors -->
		tx1 = tx2; // ok
		
		var t1 : constructor{Tx};
		var t2 : constructor{Tx};
		// XPECT noerrors -->
		t1 = t2; // error: "constructor{Tx} is not a subtype of constructor{Tx}"
	}
}


